# rustmicroservice

./: .gitignore  Cargo.toml  README.md
news-contract/: Cargo.toml
news-contract/src/: lib.rs
news-dao/: Cargo.toml
news-dao/src/: lib.rs
news-migrations/: Cargo.toml
news-migrations/src/: main.rs
news-migrations/src/migrations/: mod.rs
news-services/: Cargo.toml
news-services/src/: endpoints.rs  main.rs  service.rs
