[package]
name = "news-dao"
version = "0.1.0"
authors = ["imac"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
news-contract = { path = "../news-contract" }
postgres = "0.17.2"
actix-web = "2.0"
actix-rt = "1.1.0"
futures = "0.3.4"
tokio-postgres = "0.5.3"
tokio = "0.2.18"
uuid = { version ="0.8.1" , features = ["v4"] }
