[package]
name = "news-services"
version = "0.1.0"
authors = ["imac"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
news-contract = { path = "../news-contract" }
news-dao = { path = "../news-dao" }
serde = { version = "1.0.106" ,features = ["derive"] }
serde_json = "1.0.51"
actix = "0.9.0"
actix-web = "2.0.0"
actix-rt = "1.1.0"
env_logger = "0.7.1"
log = "0.4.8"

